hphp/hack/test/enum_supertyping/typing/duplicate_siblings_transitive.bad.php.exp
File "duplicate_siblings_transitive.bad.php", line 18, characters 40-47:
SuperEnum cannot re-inherit constant A from \SubEnumB (Typing[4389])
File "duplicate_siblings_transitive.bad.php", line 18, characters 6-14:
because it already inherited it via SubEnumA
